--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./pages/index.css" rel="stylesheet">
+    <link href="./pages/index.css" rel="stylesheet" />
     <title>Mesto</title>
   </head>
   <body class="page">
@@ -102,13 +102,16 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="popup__close-button" type="button"></button>
         <form class="popup__form popup__form_type_profile">
-        <input type="text" name="username" class="popup__input popup__name-info">
-        <input type="text" name="job" class="popup__input popup__job-info">
-        <button class="popup__save-button" type="sumbit">Сохранить</button>
-      </form>
+          <input
+            type="text"
+            name="username"
+            class="popup__input popup__name-info"
+          />
+          <input type="text" name="job" class="popup__input popup__job-info" />
+          <button class="popup__save-button" type="sumbit">Сохранить</button>
+        </form>
       </div>
     </div>
-  </div>
-  <script src="/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
