fix: исправления после автотестов

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__logo" alt="логотип" src="./images/logo.svg" />
+      <img class="header__logo" alt="logo" src="./images/logo.svg" />
     </header>
     <main class="content">
       <section class="profile">
@@ -30,7 +30,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1088404-unsplashkar.png"
-            alt="Карачаевск"
+            alt="Karachaevsk"
           />
           <div class="element__sector">
             <p class="element__title">Карачаевск</p>
@@ -41,7 +41,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1404681-unsplashelbrus.png"
-            alt="Гора Эльбрус"
+            alt="Gora Elbrus"
           />
           <div class="element__sector">
             <p class="element__title">Гора Эльбрус</p>
@@ -52,7 +52,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1556355-unsplashdombai.png"
-            alt="Карачаевск"
+            alt="Dombai"
           />
           <div class="element__sector">
             <p class="element__title">Домбай</p>
@@ -63,7 +63,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1404681-unsplashelbrus.png"
-            alt="Гора Эльбрус"
+            alt="Gora Elbrus"
           />
           <div class="element__sector">
             <p class="element__title">Гора Эльбрус</p>
@@ -74,7 +74,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1556355-unsplashdombai.png"
-            alt="Домбай"
+            alt="Dombai"
           />
           <div class="element__sector">
             <p class="element__title">Домбай</p>
@@ -85,7 +85,7 @@
           <img
             class="element__image"
             src="images/kirill-pershin-1088404-unsplashkar.png"
-            alt="Карачаево-Черкесск"
+            alt="Karachaevo"
           />
           <div class="element__sector">
             <p class="element__title">Карачаево-Черкесск</p>
