--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img
-          class="profile__avatar"
-          src="./images/avatar.jpg"
-          alt="Жак-Ив-Куско"
-        />
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="avatar" />
         <div class="profile__info">
           <p class="profile__info-name">Жак-Ив Кусто</p>
           <button class="profile__edit-button"></button>
