--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="avatar" />
         <div class="profile__info">
-          <p class="profile__info-name">Жак-Ив Кусто</p>
-          <button class="profile__edit-button"></button>
+          <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__info-job">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
       <section class="elements">
         <div class="element">
@@ -29,7 +29,7 @@
             alt="Karachaevsk"
           />
           <div class="element__sector">
-            <p class="element__title">Карачаевск</p>
+            <h2 class="element__title">Карачаевск</h2>
             <button class="element__like"></button>
           </div>
         </div>
@@ -40,8 +40,8 @@
             alt="Gora Elbrus"
           />
           <div class="element__sector">
-            <p class="element__title">Гора Эльбрус</p>
-            <button class="element__like"></button>
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -51,8 +51,8 @@
             alt="Dombai"
           />
           <div class="element__sector">
-            <p class="element__title">Домбай</p>
-            <button class="element__like"></button>
+            <h2 class="element__title">Домбай</h2>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -62,8 +62,8 @@
             alt="Gora Elbrus"
           />
           <div class="element__sector">
-            <p class="element__title">Гора Эльбрус</p>
-            <button class="element__like"></button>
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -73,8 +73,8 @@
             alt="Dombai"
           />
           <div class="element__sector">
-            <p class="element__title">Домбай</p>
-            <button class="element__like"></button>
+            <h2 class="element__title">Домбай</h2>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
@@ -84,8 +84,8 @@
             alt="Karachaevo"
           />
           <div class="element__sector">
-            <p class="element__title">Карачаево-Черкесск</p>
-            <button class="element__like"></button>
+            <h2 class="element__title">Карачаево-Черкесск</h2>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
       </section>
@@ -97,17 +97,21 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="popup__close-button" type="button"></button>
-        <form class="popup__form popup__form_type_profile">
+        <form class="popup__form" name="form">
           <input
             type="text"
             name="username"
-            class="popup__input popup__name-info"
+            class="popup__input popup__input_info_name"
           />
-          <input type="text" name="job" class="popup__input popup__job-info" />
+          <input
+            type="text"
+            name="job"
+            class="popup__input popup__input_info_job"
+          />
           <button class="popup__save-button" type="sumbit">Сохранить</button>
         </form>
       </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
