style: исправлены ошибки после второго ревью

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           />
           <div class="element__sector">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
+            <button class="element__like" type="button"></button>
           </div>
         </div>
         <div class="element">
