--- a/index.html
+++ b/index.html
@@ -22,82 +22,17 @@
         <button class="profile__add-button" type="button"></button>
       </section>
       <section class="elements">
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1088404-unsplashkar.png"
-            alt="Karachaevsk"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1404681-unsplashelbrus.png"
-            alt="Gora Elbrus"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1556355-unsplashdombai.png"
-            alt="Dombai"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Домбай</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1404681-unsplashelbrus.png"
-            alt="Gora Elbrus"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1556355-unsplashdombai.png"
-            alt="Dombai"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Домбай</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__image"
-            src="images/kirill-pershin-1088404-unsplashkar.png"
-            alt="Karachaevo"
-          />
-          <div class="element__sector">
-            <h2 class="element__title">Карачаево-Черкесск</h2>
-            <button class="element__like" type="button"></button>
-          </div>
-        </div>
+        <ul class="elements__list elements"></ul>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__description">© 2023 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="popup__close-button" type="button"></button>
-        <form class="popup__form" name="form">
+        <form class="popup__form popup__form_type_profile" name="form">
           <input
             type="text"
             name="username"
@@ -108,10 +43,54 @@
             name="job"
             class="popup__input popup__input_info_job"
           />
-          <button class="popup__save-button" type="sumbit">Сохранить</button>
+          <button class="popup__save-button popup__button-submit" type="sumbit">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <div class="popup popup_type_add">
+      <div class="popup__container">
+        <h2 class="popup__title">Новое место</h2>
+        <button class="popup__close-button" type="button"></button>
+        <form class="popup__form popup__form_type_add" name="formPopup">
+          <input
+            type="text"
+            name="place_name"
+            class="popup__input popup__input_place_name"
+            placeholder="Название"
+          />
+          <input
+            type="url"
+            name="place_link"
+            class="popup__input popup__input_place_link"
+            placeholder="Ссылка на картинку"
+          />
+          <button class="popup__create-button popup__button-submit" type="sumbit">Создать</button>
+        </form>
+      </div>
+    </div>
+    </div>
+
+    <div class="popup popup_type_open-image">
+      <div class="popup__container-image">
+          <img class="popup__picture" src="#" alt="#">
+          <p class="popup__text"></p>
+          <button type="button" class="popup__close-button popup__close-button_type_image"></button>
+      </div>
+  </div>
+
+    <template id="element__card">
+      <li class="element">
+        <button class="element__delete" type="button"></button>
+        <img
+          class="element__image" src="#" alt=""
+        />
+        <div class="element__sector">
+          <h2 class="element__title"></h2>
+          <button class="element__like" type="button"></button>
+        </li>  
+    </template>
     <script src="/scripts/index.js"></script>
   </body>
+  
 </html>
