--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             name="job"
             class="popup__input popup__input_info_job"
           />
-          <button class="popup__save-button popup__button-submit" type="sumbit">Сохранить</button>
+          <button class="popup__save-button popup__button-submit" type="sumbit">
+            Сохранить
+          </button>
         </form>
       </div>
     </div>
@@ -65,32 +67,37 @@
             class="popup__input popup__input_place_link"
             placeholder="Ссылка на картинку"
           />
-          <button class="popup__create-button popup__button-submit" type="sumbit">Создать</button>
+          <button
+            class="popup__create-button popup__button-submit"
+            type="sumbit"
+          >
+            Создать
+          </button>
         </form>
       </div>
-    </div>
     </div>
 
     <div class="popup popup_type_open-image">
       <div class="popup__container-image">
-          <img class="popup__picture" src="#" alt="#">
-          <p class="popup__text"></p>
-          <button type="button" class="popup__close-button popup__close-button_type_image"></button>
+        <img class="popup__picture" src="#" alt="#" />
+        <p class="popup__text"></p>
+        <button
+          type="button"
+          class="popup__close-button popup__close-button_type_image"
+        ></button>
       </div>
-  </div>
+    </div>
 
     <template id="element__card">
       <li class="element">
         <button class="element__delete" type="button"></button>
-        <img
-          class="element__image" src="#" alt=""
-        />
+        <img class="element__image" src="#" alt="" />
         <div class="element__sector">
           <h2 class="element__title"></h2>
           <button class="element__like" type="button"></button>
-        </li>  
+        </div>
+      </li>
     </template>
     <script src="/scripts/index.js"></script>
   </body>
-  
 </html>
