fix: исправлены ошибки после 1 ревью

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <footer class="footer">
       <p class="footer__description">© 2023 Mesto Russia</p>
     </footer>
+
     <div class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
@@ -37,11 +38,13 @@
             type="text"
             name="username"
             class="popup__input popup__input_info_name"
+            placeholder="Жак-Ив Кусто"
           />
           <input
             type="text"
             name="job"
             class="popup__input popup__input_info_job"
+            placeholder="Исследователь океана"
           />
           <button class="popup__save-button popup__button-submit" type="sumbit">
             Сохранить
@@ -98,6 +101,7 @@
         </div>
       </li>
     </template>
+    <script src="/scripts/cards.js"></script>
     <script src="/scripts/index.js"></script>
   </body>
 </html>
