--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             type="text"
             name="username"
             class="popup__input popup__input_info_name"
-            placeholder="Жак-Ив Кусто"
+            placeholder="Ваше имя"
           />
           <input
             type="text"
             name="job"
             class="popup__input popup__input_info_job"
-            placeholder="Исследователь океана"
+            placeholder="Профессия"
           />
           <button class="popup__save-button popup__button-submit" type="sumbit">
             Сохранить
