--- a/index.html
+++ b/index.html
@@ -33,20 +33,32 @@
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <button class="popup__close-button" type="button"></button>
-        <form class="popup__form popup__form_type_profile" name="form">
+        <form
+          class="popup__form popup__form_type_profile"
+          name="form"
+          novalidate
+        >
           <input
             type="text"
             name="username"
             class="popup__input popup__input_info_name"
+            minlength="2"
+            maxlength="40"
             placeholder="Ваше имя"
+            required
           />
+          <span id="username-error" class="popup__error_visible"></span>
           <input
             type="text"
             name="job"
             class="popup__input popup__input_info_job"
-            placeholder="Профессия"
+            minlength="2"
+            maxlength="200"
+            placeholder="О себе"
+            required
           />
-          <button class="popup__save-button popup__button-submit" type="sumbit">
+          <span id="job-error" class="popup__error_visible"></span>
+          <button class="popup__save-button popup__button" type="sumbit">
             Сохранить
           </button>
         </form>
@@ -57,23 +69,30 @@
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <button class="popup__close-button" type="button"></button>
-        <form class="popup__form popup__form_type_add" name="formPopup">
+        <form
+          class="popup__form popup__form_type_add"
+          name="formPopup"
+          novalidate
+        >
           <input
             type="text"
             name="place_name"
             class="popup__input popup__input_place_name"
+            minlength="2"
+            maxlength="30"
             placeholder="Название"
+            required
           />
+          <span id="place_name-error" class="popup__error_visible"></span>
           <input
             type="url"
             name="place_link"
             class="popup__input popup__input_place_link"
             placeholder="Ссылка на картинку"
+            required
           />
-          <button
-            class="popup__create-button popup__button-submit"
-            type="sumbit"
-          >
+          <span id="place_link-error" class="popup__error_visible"></span>
+          <button class="popup__create-button popup__button" type="sumbit">
             Создать
           </button>
         </form>
@@ -102,6 +121,7 @@
       </li>
     </template>
     <script src="/scripts/cards.js"></script>
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/validation.js" defer></script>
+    <script src="/scripts/index.js" defer></script>
   </body>
 </html>
