fix: исправления после тестов

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             placeholder="Ваше имя"
             required
           />
-          <span id="username-error" class="popup__error_visible"></span>
+          <span id="username-error" class="popup__error"></span>
           <input
             type="text"
             name="job"
@@ -57,7 +57,7 @@
             placeholder="О себе"
             required
           />
-          <span id="job-error" class="popup__error_visible"></span>
+          <span id="job-error" class="popup__error"></span>
           <button class="popup__save-button popup__button" type="sumbit">
             Сохранить
           </button>
@@ -83,7 +83,7 @@
             placeholder="Название"
             required
           />
-          <span id="place_name-error" class="popup__error_visible"></span>
+          <span id="place_name-error" class="popup__error"></span>
           <input
             type="url"
             name="place_link"
@@ -91,7 +91,7 @@
             placeholder="Ссылка на картинку"
             required
           />
-          <span id="place_link-error" class="popup__error_visible"></span>
+          <span id="place_link-error" class="popup__error"></span>
           <button class="popup__create-button popup__button" type="sumbit">
             Создать
           </button>
