--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
         ></button>
       </div>
     </div>
-
     <template id="element__card">
       <li class="element">
         <button class="element__delete" type="button"></button>
@@ -120,8 +119,7 @@
         </div>
       </li>
     </template>
-    <script src="/scripts/cards.js"></script>
     <script src="/scripts/validation.js" defer></script>
-    <script src="/scripts/index.js" defer></script>
+    <script type="module" src="/scripts/index.js" defer></script>
   </body>
 </html>
