--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="popup popup_type_edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <button class="popup__close-button" type="button"></button>
+
         <form
           class="popup__form popup__form_type_profile"
           name="form"
@@ -40,24 +40,27 @@
         >
           <input
             type="text"
-            name="username"
+            name="name"
             class="popup__input popup__input_info_name"
+            value="Жак-Ив Кусто"
             minlength="2"
             maxlength="40"
             placeholder="Ваше имя"
             required
           />
-          <span id="username-error" class="popup__error"></span>
+          <span id="name-error" class="popup__error"></span>
           <input
             type="text"
             name="job"
             class="popup__input popup__input_info_job"
+            value="Исследователь океана"
             minlength="2"
             maxlength="200"
             placeholder="О себе"
             required
           />
           <span id="job-error" class="popup__error"></span>
+          <button class="popup__close-button" type="button"></button>
           <button class="popup__save-button popup__button" type="sumbit">
             Сохранить
           </button>
@@ -68,7 +71,7 @@
     <div class="popup popup_type_add">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <button class="popup__close-button" type="button"></button>
+
         <form
           class="popup__form popup__form_type_add"
           name="formPopup"
@@ -92,6 +95,7 @@
             required
           />
           <span id="place_link-error" class="popup__error"></span>
+          <button class="popup__close-button" type="button"></button>
           <button class="popup__create-button popup__button" type="sumbit">
             Создать
           </button>
@@ -101,7 +105,7 @@
 
     <div class="popup popup_type_open-image">
       <div class="popup__container-image">
-        <img class="popup__picture" src="#" alt="#" />
+        <img class="popup__picture" src="" alt="#" />
         <p class="popup__text"></p>
         <button
           type="button"
@@ -113,13 +117,13 @@
     <template id="element__card">
       <li class="element">
         <button class="element__delete" type="button"></button>
-        <img class="element__image" src="#" alt="" />
+        <img class="element__image" src="" alt="#" />
         <div class="element__sector">
           <h2 class="element__title"></h2>
           <button class="element__like" type="button"></button>
         </div>
       </li>
     </template>
-    <script type="module" src="/scripts/index.js" defer></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
